fix: 代码生成测试问题修复